Homer-498 asap fix on ca header logo on individual case studies was too large

--- a/src/components/menus/mobile-menu/_mobile-menu.scss
+++ b/src/components/menus/mobile-menu/_mobile-menu.scss
@@ -5,7 +5,10 @@
   width: 20px;
   height: 30px;
   right: 48px;
-  top: 48px;
+  top: 40px;
+  @media(min-width: $tablet-screen) {
+    top: 62px;
+  }
 
   // Different postion for burger icon in the red header 
   .red-header & {
